# dehar-spac

./: .gitignore  README.md  pyproject.toml
analysis/: README.md
analysis/cascade/: breakpoint_bootstrap_demo.py  changepoint_detection.py
analysis/satellite_comparison/: index_sensitivity.py  prosail_leaf_angle.py  s2a_msi_srf.csv  vod_biomass_water.py
notebooks/: README.md
notebooks/00_exploration/: cross_stream_annual_2025_dehar.ipynb  leaf_batch_processing_dehar.ipynb  leaf_pgap_diurnal_dehar.ipynb  leaf_processing_dehar.ipynb  leaf_processing_exploration.ipynb  leaf_tls_concepts_reference.ipynb
notebooks/01_processing/: sentinel1_filter_dehar.ipynb  sentinel2_filter_dehar.ipynb
notebooks/02_analysis/: compound_event.ipynb  cross_stream_annual_2025_dehar.ipynb  leaf_vod_met_comparison_dehar.ipynb
notebooks/02_analysis/EGU/: time_series.ipynb
scripts/: export_leaf_hemi_hi_scan5_csv.py  process_atmosphere-soil.py  process_gcc_anglecam.py  process_gnss-t_vod.py  process_sapflow.py  process_sentinel1.py  process_sentinel2.py  process_stemwater_potential.py  process_twd.py
src/: README.md  __init__.py
src/atmosphere/: __init__.py  flux.py  meteo.py
src/physiology/: __init__.py  sapflow.py  twd.py  water_potential.py
src/proximal_rs/: anglecam.py  gnss_vod.py  leaf.py  phenocam.py
src/satellite/: __init__.py  download_sentinel1.py  download_sentinel2.py  load_satellite_stacks.py  modis.py  sentinel1.py  sentinel2.py
src/soil/: __init__.py  vwc.py
src/utils/: __init__.py  constants.py  io.py  qc.py  time.py
(+3 files in other folders)
